# sequence-label

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/sequence_label/: __init__.py  core.py
src/sequence_label/transformers/: __init__.py  core.py
tests/: test_core.py  test_transformers.py
