[project]
name = "sequence-label"
description = "A Sequence Labeling Utility"
authors = [
    {name = "Yasufumi Taniguchi", email = "yasufumi.taniguchi@gmail.com"},
]
requires-python = ">=3.8,<3.12"
dynamic = ["version"]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.optional-dependencies]
transformers = [
    "transformers>=4.31.0,<5",
]
ci = [
    "sequence-label[transformers]",
    "pytest>=7.4.0,<8",
    "pytest-cov>=4.1.0,<5",
    "ruff>=0.0.284",
    "black>=23.7.0,<24",
    "mypy>=1.5.0,<2",
]
dev = [
    "sequence-label[ci]",
    "ipython>=8.14.0,<9",
    "ipdb>=0.13.13,<0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sequence_label"]

[tool.hatch.version]
path = "src/sequence_label/__about__.py"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
src = ["src"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["transformers"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
