[project]
name = "sequence-label"
description = "A Tensor Creation and Label Reconstruction for Sequence Labeling"
authors = [
    {name = "Yasufumi Taniguchi", email = "yasufumi.taniguchi@gmail.com"},
]
requires-python = ">=3.10,<3.14"
dynamic = ["version"]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
transformers = [
    "transformers>=4.31.0,<5",
]
ci = [
    "sequence-label[transformers]",
    "pytest>=7.4.0,<8",
    "pytest-cov>=4.1.0,<5",
    "ruff>=0.2.0",
    "black>=23.7.0,<24",
    "mypy>=1.5.0,<2",
    "hypothesis>=6.86.2,<7",
]
dev = [
    "sequence-label[ci]",
    "ipython>=8.14.0,<9",
    "ipdb>=0.13.13,<0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sequence_label"]

[tool.hatch.version]
path = "src/sequence_label/__about__.py"

[tool.black]
line-length = 88

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C4",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "TCH",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "SIM", # flake8-simplify
  "Q", # flake8-quotes
  "PIE", # flake8-pie
  "UP",  # pyupgrade
  "PT",  # flake8-pytest-style
  "C90",  # mccabe
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
files = ["src", "tests"]
strict = true

[[tool.mypy.overrides]]
module = ["transformers"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpath = ["tests"]
addopts = "--cov=sequence_label --cov-report=term-missing -vv"
